--- a/project_hint_reading_the_data.ipynb
+++ b/project_hint_reading_the_data.ipynb
@@ -326,7 +326,7 @@
     "id": "20e15ae7-4b52-45e1-8a60-0ff37cc93984"
    },
    "source": [
-    "**From the content, it appears to start with the bytes \"PK\\x03\\......\", which suggests that it might be a ZIP archive file. How do I know it? Experience! I have worked with something similar earlier.**"
+    "**From the content, it appears to start with the bytes \"PK\\x03\\......\", which suggests that it might be a ZIP archive file.**"
    ]
   },
   {
